# Cmake-guide-tutorial-solutinons

./: README.md
tutorial/: CMakeLists.txt  README.md  tutorial.cxx
tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
tutorial/Step3_build/: .ninja_deps  .ninja_log  build.ninja
tutorial/Step5_build/: build.ninja
